Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
C13DRVAPI VOID __stdcall C13_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_MsgReset(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgSWD1Rd(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MsgSWD2Rd(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_Mul(ULONG mula,ULONG mulb);
C13DRVAPI ERRVAL __stdcall C13_PlayClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_PlayConfigEx(ULONG configval,ULONG playcount,ULONG seqcount,USHORT cardnum,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_PlayConfigExx(ULONG configval,ULONG playaddr,ULONG playcount,ULONG seqaddr,ULONG seqcount,USHORT cardnum,HCARD handleval);
C13DRVAPI INT __stdcall C13_PlayStatus(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_PlayWrEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);
C13DRVAPI BYTE __stdcall C13_PortRd(INT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_PortWr(BYTE value,INT addrval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_ProgRdW(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ProgWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_RAMRdB(ULONG addrval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_RAMRdL(ULONG addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMRdsW(LPUSHORT valueptr,ULONG addrval,ULONG countval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_RAMRdW(ULONG addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWipe(HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWipeEx(USHORT value,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWrsW(LPUSHORT valueptr,ULONG addrval,ULONG countval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_RTConfigEx(ULONG configval,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_RTConfigExx(ULONG configval,INT taval,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_RTCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_RTCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_RTReset(INT taval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_RTStatus(INT taval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_RTSWDRd(INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedBuild(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedBuildEx(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedBuildExx(ULONG frametime,INT nummsgs,LPMSGADDR msgaddr,LPINT period,LPVOID buf,ULONG bufsize,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedCalc(LPMSGADDR msgaddr,HCARD handleval);
C13DRVAPI VOID __stdcall C13_SchedDisplay(ULONG nummsgs,LPULONG count);
C13DRVAPI VOID __stdcall C13_SchedHook(INT index,LPVOID ptr);
C13DRVAPI ERRVAL __stdcall C13_SchedInsEnd(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedInsMsg(ULONG index,LPMSGADDR msgaddr,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SchedInsStart(ULONG frametime,ULONG count,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_SchedMaxval(LPULONG array,ULONG arraycount);
C13DRVAPI ULONG __stdcall C13_SchedMinval(LPULONG array,ULONG arraycount);
C13DRVAPI ERRVAL __stdcall C13_SerialClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SerialConfig(ULONG configval,USHORT count,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_SerialConfigEx(ULONG configval,USHORT count,HCARD handleval);
C13DRVAPI INT __stdcall C13_SerialStatus(HCARD handleval);
C13DRVAPI ULONG __stdcall C13_SerialWr(LPUSHORT buf,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_Shl(ULONG dataval,USHORT cntval);
C13DRVAPI ULONG __stdcall C13_Shr(ULONG dataval,USHORT cntval);
C13DRVAPI VOID __stdcall C13_TimerClear(HCARD handleval);
C13DRVAPI ULONG __stdcall C13_TimerRd(HCARD handleval);
C13DRVAPI INT __stdcall C13_TimerResolution(INT timerresol,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_TimerResolutionEx(USHORT timershift,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_ValFromAscii(LPCSTR asciistr,INT radixval);
C13DRVAPI USHORT __stdcall C13_ValGetBits(USHORT oldvalue,INT startbit,INT endbit);
C13DRVAPI USHORT __stdcall C13_ValPackRTCWD(INT MCflag,INT TAval,INT TRflag,INT SAval,INT count);
C13DRVAPI USHORT __stdcall C13_ValPutBits(USHORT oldvalue,USHORT newfld,INT startbit,INT endbit);
C13DRVAPI LPSTR __stdcall C13_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);
C13DRVAPI VOID __stdcall C13_ValUnpackRTCWD(USHORT cwd,LPINT BCASTflag,LPINT MCflag,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT count);
C13DRVAPI ERRVAL __stdcall C13_WatchConfig(ULONG configval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_WatchWr(ULONG secs,HCARD handleval);
C13DRVAPI VOID __stdcall C13_WatchWrEx(ULONG value,HCARD handleval);
/**
*
*  Bus controller configuration options
*
**/

#define BCCFG_DEFAULT      0x00000000L      //Select all default settings
#define BCCFG_ENABLE       0x00000000L      //Enable bus controller (default)
#define BCCFG_DISABLE      0x00000001L      //Disable bus controller
#define BCCFG_TRIGNONE     0x00000000L      //No trigger (default)
#define BCCFG_TRIGEXT      0x00000010L      //Trigger external
#define BCCFG_TRIGSTART    0x00000020L      //Trigger external start
#define BCCFG_NOINTHALT    0x00000000L      //Do not generate interrupt on halt (default)
#define BCCFG_INTHALT      0x00000100L      //Generate interrupt on halt
#define BCCFG_NOINTPAUSE   0x00000000L      //Do not generate interrupt on pause (default)
#define BCCFG_INTPAUSE     0x00000200L      //Generate interrupt on pause
#define BCCFG_NOLOOPMAX    0x00000000L      //Disable maximum loop count (default)
#define BCCFG_LOOPMAX      0x00001000L      //Enable maximum loop count
#define BCCFG_NOSTEP       0x00000000L      //Disable single stepping (default)
#define BCCFG_STEP         0x00002000L      //Enable single stepping
#define BCCFG_MC01         0x00000000L      //Select SA=00000 or SA=11111 for mode codes (default)
#define BCCFG_MC1          0x01000000L      //Select SA=11111 for mode codes
#define BCCFG_MC0          0x02000000L      //Select SA=00000 for mode codes
#define BCCFG_MCNONE       0x03000000L      //Disable mode codes
#define BCCFG_SYNCALL      0x00000000L      //*Sync on all messages (default)
#define BCCFG_SYNCSEL      0x40000000L      //*Selective sync
#define BCCFG_MODEL        0x00000000L      //BC messages are created in static RAM (default)
#define BCCFG_RAM          0x00100000L      //BC messages are created in static RAM
#define BCCFG_DPRAM        0x00200000L      //BC messages are created in dual-port RAM