Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32VB.BAS

Public Declare Function C13_MsgOptWr Lib "C13W32.DLL" Alias "_C13_MsgOptWr@12" (ByVal msgopt As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgReset Lib "C13W32.DLL" Alias "_C13_MsgReset@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgSWD1Rd Lib "C13W32.DLL" Alias "_C13_MsgSWD1Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_MsgSWD2Rd Lib "C13W32.DLL" Alias "_C13_MsgSWD2Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_Mul Lib "C13W32.DLL" Alias "_C13_Mul@8" (ByVal mula As Long, ByVal mulb As Long) As Long
Public Declare Function C13_PlayClear Lib "C13W32.DLL" Alias "_C13_PlayClear@4" (ByVal handleval As Long) As Long
Public Declare Function C13_PlayConfigEx Lib "C13W32.DLL" Alias "_C13_PlayConfigEx@20" (ByVal configval As Long, ByVal playcount As Long, ByVal seqcount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_PlayConfigExx Lib "C13W32.DLL" Alias "_C13_PlayConfigExx@28" (ByVal configval As Long, ByVal playaddr As Long, ByVal playcount As Long, ByVal seqaddr As Long, ByVal seqcount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_PlayStatus Lib "C13W32.DLL" Alias "_C13_PlayStatus@4" (ByVal handleval As Long) As Long
Public Declare Function C13_PlayWrEx Lib "C13W32.DLL" Alias "_C13_PlayWrEx@12" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal handleval As Long) As Integer
Public Declare Function C13_PortRd Lib "C13W32.DLL" Alias "_C13_PortRd@8" (ByVal addrval As Long, ByVal handleval As Long) As Byte
Public Declare Function C13_PortWr Lib "C13W32.DLL" Alias "_C13_PortWr@12" (ByVal value As Byte, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ProgRdW Lib "C13W32.DLL" Alias "_C13_ProgRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function C13_ProgWrW Lib "C13W32.DLL" Alias "_C13_ProgWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_RAMFill Lib "C13W32.DLL" Alias "_C13_RAMFill@16" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RAMRdB Lib "C13W32.DLL" Alias "_C13_RAMRdB@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_RAMRdL Lib "C13W32.DLL" Alias "_C13_RAMRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RAMRdsW Lib "C13W32.DLL" Alias "_C13_RAMRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RAMRdW Lib "C13W32.DLL" Alias "_C13_RAMRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_RAMWipe Lib "C13W32.DLL" Alias "_C13_RAMWipe@4" (ByVal handleval As Long) As Long
Public Declare Function C13_RAMWipeEx Lib "C13W32.DLL" Alias "_C13_RAMWipeEx@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_RAMWrB Lib "C13W32.DLL" Alias "_C13_RAMWrB@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RAMWrL Lib "C13W32.DLL" Alias "_C13_RAMWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RAMWrsW Lib "C13W32.DLL" Alias "_C13_RAMWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RAMWrW Lib "C13W32.DLL" Alias "_C13_RAMWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RTConfigEx Lib "C13W32.DLL" Alias "_C13_RTConfigEx@12" (ByVal configval As Long, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RTConfigExx Lib "C13W32.DLL" Alias "_C13_RTConfigExx@12" (ByVal configval As Long, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RTCreateListEx Lib "C13W32.DLL" Alias "_C13_RTCreateListEx@36" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RTCreateListExx Lib "C13W32.DLL" Alias "_C13_RTCreateListExx@36" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RTReset Lib "C13W32.DLL" Alias "_C13_RTReset@8" (ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_RTStatus Lib "C13W32.DLL" Alias "_C13_RTStatus@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_RTSWDRd Lib "C13W32.DLL" Alias "_C13_RTSWDRd@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_SchedBuild Lib "C13W32.DLL" Alias "_C13_SchedBuild@16" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef freq As Long, ByVal handleval As Long) As Long
Public Declare Function C13_SchedBuildEx Lib "C13W32.DLL" Alias "_C13_SchedBuildEx@28" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef freq As Long, ByRef period As Long, ByRef buf As Long, ByVal bufsize As Long, ByVal handleval As Long) As Long
Public Declare Function C13_SchedBuildExx Lib "C13W32.DLL" Alias "_C13_SchedBuildExx@28" (ByVal frametime As Long, ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef period As Long, ByRef buf As Long, ByVal bufsize As Long, ByVal handleval As Long) As Long
Public Declare Function C13_SchedCalc Lib "C13W32.DLL" Alias "_C13_SchedCalc@8" (ByRef msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_SchedDisplay Lib "C13W32.DLL" Alias "_C13_SchedDisplay@8" (ByVal nummsgs As Long, ByRef count As Long) As Long
Public Declare Function C13_SchedHook Lib "C13W32.DLL" Alias "_C13_SchedHook@8" (ByVal index As Long, ByRef ptr As Long) As Long
Public Declare Function C13_SchedInsEnd Lib "C13W32.DLL" Alias "_C13_SchedInsEnd@4" (ByVal handleval As Long) As Long
Public Declare Function C13_SchedInsMsg Lib "C13W32.DLL" Alias "_C13_SchedInsMsg@12" (ByVal index As Long, ByRef msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_SchedInsStart Lib "C13W32.DLL" Alias "_C13_SchedInsStart@12" (ByVal frametime As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function C13_SchedMaxval Lib "C13W32.DLL" Alias "_C13_SchedMaxval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function C13_SchedMinval Lib "C13W32.DLL" Alias "_C13_SchedMinval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function C13_SerialClear Lib "C13W32.DLL" Alias "_C13_SerialClear@4" (ByVal handleval As Long) As Long
Public Declare Function C13_SerialConfig Lib "C13W32.DLL" Alias "_C13_SerialConfig@12" (ByVal configval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_SerialConfigEx Lib "C13W32.DLL" Alias "_C13_SerialConfigEx@12" (ByVal configval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_SerialStatus Lib "C13W32.DLL" Alias "_C13_SerialStatus@4" (ByVal handleval As Long) As Long
Public Declare Function C13_SerialWr Lib "C13W32.DLL" Alias "_C13_SerialWr@8" (ByRef buf As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_Shl Lib "C13W32.DLL" Alias "_C13_Shl@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function C13_Shr Lib "C13W32.DLL" Alias "_C13_Shr@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function C13_TimerClear Lib "C13W32.DLL" Alias "_C13_TimerClear@4" (ByVal handleval As Long) As Long
Public Declare Function C13_TimerRd Lib "C13W32.DLL" Alias "_C13_TimerRd@4" (ByVal handleval As Long) As Long
Public Declare Function C13_TimerResolution Lib "C13W32.DLL" Alias "_C13_TimerResolution@8" (ByVal timerresol As Long, ByVal handleval As Long) As Long
Public Declare Function C13_TimerResolutionEx Lib "C13W32.DLL" Alias "_C13_TimerResolutionEx@8" (ByVal timershift As Integer, ByVal handleval As Long) As Integer
Public Declare Function C13_ValFromAscii Lib "C13W32.DLL" Alias "_C13_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Long) As Long
Public Declare Function C13_ValGetBits Lib "C13W32.DLL" Alias "_C13_ValGetBits@12" (ByVal oldvalue As Integer, ByVal startbit As Long, ByVal endbit As Long) As Integer
Public Declare Function C13_ValPackRTCWD Lib "C13W32.DLL" Alias "_C13_ValPackRTCWD@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal count As Long) As Integer
Public Declare Function C13_ValPutBits Lib "C13W32.DLL" Alias "_C13_ValPutBits@16" (ByVal oldvalue As Integer, ByVal newfld As Integer, ByVal startbit As Long, ByVal endbit As Long) As Integer
Public Declare Function C13_ValToAscii Lib "C13W32.DLL" Alias "_C13_ValToAscii@16" (ByVal value As Long, ByRef asciistr As String, ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function C13_ValUnpackRTCWD Lib "C13W32.DLL" Alias "_C13_ValUnpackRTCWD@28" (ByVal cwd As Integer, ByRef bcastflag As Long, ByRef mcflag As Long, ByRef taval As Long, ByRef trflag As Long, ByRef saval As Long, ByRef count As Long) As Long
Public Declare Function C13_WatchConfig Lib "C13W32.DLL" Alias "_C13_WatchConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_WatchWr Lib "C13W32.DLL" Alias "_C13_WatchWr@8" (ByVal secs As Long, ByVal handleval As Long) As Long
Public Declare Function C13_WatchWrEx Lib "C13W32.DLL" Alias "_C13_WatchWrEx@8" (ByVal value As Long, ByVal handleval As Long) As Long

'/**
'*
'*  Bus controller configuration options
'*
'**/

Public Const BCCFG_DEFAULT As Long = &H0 '//Select all default settings
Public Const BCCFG_ENABLE As Long = &H0  '//Enable bus controller (default)
Public Const BCCFG_DISABLE As Long = &H1 '//Disable bus controller
Public Const BCCFG_TRIGNONE As Long = &H0    '//No trigger (default)
Public Const BCCFG_TRIGEXT As Long = &H10 '//Trigger external
Public Const BCCFG_TRIGSTART As Long = &H20   '//Trigger external start
Public Const BCCFG_NOINTHALT As Long = &H0   '//Do not generate interrupt on halt (default)
Public Const BCCFG_INTHALT As Long = &H100 '//Generate interrupt on halt
Public Const BCCFG_NOINTPAUSE As Long = &H0  '//Do not generate interrupt on pause (default)
Public Const BCCFG_INTPAUSE As Long = &H200    '//Generate interrupt on pause
Public Const BCCFG_NOLOOPMAX As Long = &H0   '//Disable maximum loop count (default)
Public Const BCCFG_LOOPMAX As Long = &H1000 '//Enable maximum loop count
Public Const BCCFG_NOSTEP As Long = &H0  '//Disable single stepping (default)
Public Const BCCFG_STEP As Long = &H2000    '//Enable single stepping
Public Const BCCFG_MC01 As Long = &H0    '//Select SA=00000 or SA=11111 for mode codes (default)
Public Const BCCFG_MC1 As Long = &H1000000 '//Select SA=11111 for mode codes
Public Const BCCFG_MC0 As Long = &H2000000 '//Select SA=00000 for mode codes
Public Const BCCFG_MCNONE As Long = &H3000000  '//Disable mode codes
Public Const BCCFG_SYNCALL As Long = &H0 '//Sync on all messages (default)
Public Const BCCFG_SYNCSEL As Long = &H40000000 '//Selective sync
Public Const BCCFG_MODEL As Long = &H0   '//BC messages are created in static RAM (default)
Public Const BCCFG_RAM As Long = &H100000 '//BC messages are created in static RAM
Public Const BCCFG_DPRAM As Long = &H200000   '//BC messages are created in dual-port RAM

'/**
'*
'*  Monitor configuration options
'*
'**/
